<?xml version="1.0" encoding="utf-8"?>
<ScrollView



    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile_details">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:text="@string/profile_details"
        android:textSize="30dp"
        android:layout_margin="30dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suvidha_center_number"
        android:textSize="15dp"
        android:layout_margin="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/suvidha_num"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distributor_name"
        android:textSize="15dp"
        android:layout_margin="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/dist_name"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ward_num"
        android:textSize="15dp"
        android:layout_margin="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/ward_num"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_name"
        android:textSize="15dp"
        android:layout_margin="20dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/customer_name"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            />

        <ImageView
            android:id="@+id/profile_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_num"
        android:textSize="15dp"
        android:layout_margin="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/customer_num"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_address"
        android:textSize="15dp"
        android:layout_margin="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/customer_address"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adhar_num"
        android:textSize="15dp"
        android:layout_margin="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/adhar_num"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        />

        <ImageView
            android:id="@+id/adhar_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pan_num"
        android:textSize="15dp"
        android:layout_margin="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/pan_num"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            />

        <ImageView
            android:id="@+id/pan_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
        />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Email"
    android:textSize="15dp"
    android:layout_margin="20dp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/email"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Photo"
        android:textSize="15dp"
        android:layout_margin="20dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_photo"
        android:layout_marginLeft="30dp"
        /><TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Bank_details"
    android:textSize="20dp"
    android:layout_margin="20dp"
    />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/bank_name"
    android:textSize="15dp"
    android:layout_margin="20dp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/bank_name"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        /><TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/bank_account"
    android:textSize="15dp"
    android:layout_margin="20dp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/bank_account"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        /><TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/ifsc_code"
    android:textSize="15dp"
    android:layout_margin="20dp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/ifsc_code"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        /><TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Mode_of_payment"
    android:textSize="15dp"
    android:layout_margin="20dp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/mode_of_payment"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        /><TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Ammount"
    android:textSize="15dp"
    android:layout_margin="20dp"
    />

    <TextView
        android:id="@+id/Amount"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginLeft="30dp"
        android:text=""
        android:textSize="20dp" /><TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Payment_details"
    android:textSize="15dp"
    android:layout_margin="20dp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/payment_details"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        /><TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/reference_one"
    android:textSize="15dp"

    android:onClick="one"
    android:layout_margin="20dp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reference_two"
        android:textSize="15dp"
        android:onClick="two"
        android:layout_margin="20dp"
        />
</LinearLayout>



</ScrollView>