<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/customer_name"
    android:layout_margin="30dp"
    android:id="@+id/name"
    android:textSize="20dp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/customer_name"
        android:layout_below="@+id/name"
        android:layout_marginLeft="50dp"
        android:textSize="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_num"
     android:layout_toRightOf="@+id/name"
        android:layout_margin="30dp"
        android:id="@+id/num"
        android:textSize="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/customer_num"
        android:layout_below="@+id/num"
        android:layout_marginLeft="50dp"
        android:textSize="20dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customer_name"
        android:layout_centerHorizontal="true"
        android:text="@string/view_details"
        android:padding="10dp"
        android:id="@+id/view_details"
        android:background="@drawable/rectangle"/>
</RelativeLayout>